--- a/config.yml.j2
+++ b/config.yml.j2
@@ -36,7 +36,9 @@ presets:
       IAMRole:
       - "OrganizationAccountAccessRole"
       - property: tag:protected
-        value: true 
+        value: true
+      - property: Path
+        value: "/aws-reserved/sso.amazonaws.com/"
       IAMRolePolicy:
       - property: tag:role:protected
         value: "true"
@@ -47,11 +49,24 @@ presets:
 
   controltower:
     filters:
+    IAMRole:
+      - "OrganizationAccountAccessRole"
+      - property: tag:managed_by
+        value: "AFT"
+      - property: tag:Name
+        type: glob
+        value: "aft*"
+      - property: tag:Name
+        type: glob
+        value: "aws-controltower*"
+      - property: Name
+        type: glob
+        value: "AWSControlTower*"
       CloudWatchLogsLogGroup:
       - /aws/lambda/aws-controltower-NotificationForwarder
       - StackSet-AWSControlTowerBP-VPC-ACCOUNT-FACTORY-*
       LambdaFunction:
-      - aws-controltower-NotificationForwarder
+      - "aws-controltower-NotificationForwarder"
       EC2VPC:
       - property: tag:Name
         value: "aws-controltower-VPC"
@@ -60,7 +75,7 @@ presets:
         type: glob
         value: "aws-controltower-*"
       ConfigServiceConfigurationRecorder:
-      - aws-controltower-BaselineConfigRecorder
+      - "aws-controltower-BaselineConfigRecorder"
       EC2RouteTable:
       - property: tag:Name
         type: glob
@@ -80,8 +95,7 @@ presets:
         type: glob
         value: "*aws-controltower-SecurityNotifications*"
       SNSSubscription:
-      - property: ARN
-        type: glob
+      - type: glob
         value: "*aws-controltower-SecurityNotifications*"
       ConfigServiceConfigRule:
       - "AWSControlTower_*"
@@ -103,3 +117,6 @@ presets:
       - "Rule: aws-controltower-ConfigComplianceChangeEventRule"
       SFNStateMachine:
       - "*aft-account-provisioning-customizations"
+      CodePipelinePipeline:
+      - type: glob
+        value: "*customizations*"
