--- a/config.yml.j2
+++ b/config.yml.j2
@@ -28,6 +28,7 @@ resource-types:
     - RoboMakerRobot
     - RoboMakerDeploymentJob
     - OSPackage
+    - SSMParameter
     
 presets:
   terraform:
